# gevulot-zkhack

prover/: Cargo.toml  commands.txt  gevulot-manifest.json
prover/src/: main.rs
verifier/: Cargo.toml  gevulot-manifest.json
verifier/src/: main.rs
