[package]
name = "prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
gevulot-shim = { git = "https://github.com/gevulotnetwork/gevulot.git" }
gevulot-common = { git = "https://github.com/gevulotnetwork/gevulot.git" }
